rnsc/test_data/rns_integration/error/parser/method_directive/access_flags/mixed_valid_and_invalid.rns
.class MethodWithMixedFlags
.super java/lang/Object

.method public interface static module ()V
.method_end
.class_end
